--- a/_posts/2018-03-28-welcome.md
+++ b/_posts/2018-03-28-welcome.md
@@ -5,6 +5,10 @@ title: Welcome to yonsei-blocks.github.io!
 
 ## 연세블럭스 홈페이지에 오신걸 환영합니다
 
+암호화폐의 underlying technology인 블록체인에 대해서 깊이있게 배워보고 싶었습니다. 하지만 대부분의 강의는 수박 겉햝기이고 기술적인 내용이 부족합니다. 또한 한글로 번역된 기술문서도 많이 부족해서 배움에 어려움을 느꼈습니다.
+
+배우기에 가장 좋은 방법은 직접 해보는 것입니다. 저희가 직접 블럭체인을 개발하고자 합니다. 이 과정을 자세히 document해서 꼼꼼한 가이드를 제작해 저희의 이해도도 높이고 커뮤니티에 도움이 되고자 합니다. 
+
 여기에 연세블럭스의 코어인 [yonseiblocks][yonseiblocks]에서 진행 상황을 주기적으로 기록합니다. 코드를 분석하실 때 참고해주시기 바랍니다.
 
 [yonseiblocks]: https://github.com/yonsei-blocks/yonseiblocks
