Remove redundant LICENSE

--- a/_posts/2018-03-29-first.md
+++ b/_posts/2018-03-29-first.md
@@ -5,12 +5,12 @@ title: 블럭체인 틀 짜기
 
 *이번 글은 commit: [cc52d2aa545ce20d78a49efaf338991844512a6e][cc52d2aa545ce20d78a49efaf338991844512a6e] 까지의 코드를 바탕으로 작성했습니다. 코드를 보실때 참고해주시기 바랍니다.*
 
-## 블럭체인의 틀을 작성해보겠습니다. 
+---
 
 ### 아웃라인
-저희가 오늘 구현할 내용을 아웃라인하겠습니다:
+이번 글에선 블럭체인의 틀을 작성해보겠습니다. 블록체인의 핵심 기술을 구현하되, 코드의 복잡도는 최대한 낮추도록 하겠습니다. 부족한 부분은 추후 수정해가도록 하겠습니다.
 
-Yonsei Blocks의 블럭체인인 `yonseiblocks`를 구축합니다
+저희가 오늘 구현할 내용을 아웃라인하겠습니다:
 
 #### `block`
 - `transactions` 값 여러개를 기록하는 `block`을 생성합니다
@@ -365,6 +365,8 @@ if __name__ == '__main__':
 
 마지막으로 웹서버를 실행하는 메인함수를 작성합니다.
 
+---
+
 ## 실행
 
 ![Mining]({{site.baseurl}}/images/first/mine1.png)
@@ -382,6 +384,8 @@ if __name__ == '__main__':
 ![Get]({{site.baseurl}}/images/first/get.png)
 
 현재 `chain` 상태 확인하기.
+
+---
 
 ## 마무리
 
