Update first post

--- a/_posts/2018-03-29-first.md
+++ b/_posts/2018-03-29-first.md
@@ -1,30 +1,39 @@
 ---
 layout: post
-title: 블럭체인 틀 짜기
+title: 블록체인 틀 짜기
 ---
+
+이번 글에선 블록체인의 틀을 작성해보겠습니다.
 
 *이번 글은 commit: [cc52d2aa545ce20d78a49efaf338991844512a6e][cc52d2aa545ce20d78a49efaf338991844512a6e] 까지의 코드를 바탕으로 작성했습니다. 코드를 보실때 참고해주시기 바랍니다.*
 
+*`yonsei blocks`의 코드는 [Daniel van Flymen][dvf]의 글과 코드를 참조해 작성했습니다. 원본도 확인해주시기 바랍니다.*
+
 ---
 
-### 아웃라인
-이번 글에선 블럭체인의 틀을 작성해보겠습니다. 블록체인의 핵심 기술을 구현하되, 코드의 복잡도는 최대한 낮추도록 하겠습니다. 부족한 부분은 추후 수정해가도록 하겠습니다.
+* Do not remove this line (it will not be displayed)
+{:toc}
 
-저희가 오늘 구현할 내용을 아웃라인하겠습니다:
+---
 
-#### `block`
-- `transactions` 값 여러개를 기록하는 `block`을 생성합니다
-- 각 `block`은 이전의 `block`의 `prev_hash`값을 기록해 불역성을 보장합니다
-- 각 `block`은 `proof`를 기록해 채굴자가 processing power를 투자했음을 보장합니다
+## 아웃라인
+블록체인의 핵심 기술을 구현하되, 코드의 복잡도는 최대한 낮추도록 하겠습니다. 부족한 부분은 추후 수정해가도록 하겠습니다.
 
-#### `transaction`
-- `node`간의 거래를 가능케합니다
-- `sender`, `receiver`, `amount` 등의 정보를 기록합니다
+우선 저희가 오늘 구현할 내용을 아웃라인하겠습니다:
 
-#### 네트워크
-- `yonseiblocks`에 참여하기 위해 `node`로 등록하는 기능을 구현합니다
-- `yonseiblocks` 네트워크에서 `node`를 register/deregister하는 기능을 구현합니다
-- `yonseiblocks` 네트워크의 다른 `node`의 블럭체인을 받아와 longest-chain 방식으로 consensus를 받습니다
+- `block`
+    - `transactions` 값 여러개를 기록하는 `block`을 생성합니다
+    - 각 `block`은 이전의 `block`의 `prev_hash`값을 기록해 불역성을 보장합니다
+    - 각 `block`은 `proof`를 기록해 채굴자가 processing power를 투자했음을 보장합니다
+
+- `transaction`
+    - `node`간의 거래를 가능케합니다
+    - `sender`, `receiver`, `amount` 등의 정보를 기록합니다
+
+- 네트워크
+    - `yonseiblocks`에 참여하기 위해 `node`로 등록하는 기능을 구현합니다
+    - `yonseiblocks` 네트워크에서 `node`를 register/deregister하는 기능을 구현합니다
+    - `yonseiblocks` 네트워크의 다른 `node`의 블록체인을 받아와 longest-chain 방식으로 consensus를 받습니다
 
 ---
 
@@ -41,7 +50,7 @@ title: 블럭체인 틀 짜기
 
 #### *Blockchain* 클래스 정의
 
-*Blockchain* 클래스에는 블록체인 자체인 `self.chain`이 있으며 아직 블록체인에 포함되지 않은 `transaction`을 담고 있을 `utxo`가 필요합니다. 또한 Blockchain에 참여하고 있는 `node`를 기록하고 있어야 합니다. 프로그램을 처음 실행하면 블록체인의 첫 블록인 *genesis block*도 생성해야 합니다. 
+*Blockchain* 클래스에는 블록체인 자체인 `self.chain`이 필요하며 아직 블록체인에 포함되지 않은 `transaction`을 담고 있을 `utxo`도 필요합니다. 또한 블록체인 참여하고 있는 `node`를 기록하고 있어야 합니다. 프로그램을 처음 실행하면 블록체인의 첫 블록인 *genesis block*도 생성해야 합니다. 
 
 ```
 class Blockchain(object):
@@ -84,7 +93,7 @@ class Blockchain(object):
         return block
 ```
 
-`block`에는 Blockchain에서 몇 번째인지 확인할 수 있는 `index`, 생성된 시간에 대한 `timestamp`, 블록에 포함되는 `transactions`를 포함하고 있습니다. 또한 채굴자가 processing power를 투자했다는 것을 증명하기 위해 *proof of work*를 수행할 것입니다. 그 작업의 결과물인 `proof`도 포함을 하며, Blockchain의 불역성을 위해 이전 `block`에 대한 해쉬값인 `prev_hash`를 포함합니다.
+`block`에는 블록체인에서 몇 번째인지 확인할 수 있는 `index`, 생성된 시간에 대한 `timestamp`, 블록에 포함되는 `transactions`를 포함하고 있습니다. 또한 채굴자가 processing power를 투자했다는 것을 증명하기 위해 *proof of work*를 수행할 것입니다. 그 작업의 결과물인 `proof`도 포함을 하며, 블록체인의 불역성을 위해 이전 `block`에 대한 해쉬값인 `prev_hash`를 포함합니다.
 
 비트코인은 하나의 `block`당 포함할 수 있는 `transactions` 개수가 정해져 있으며 사기 방지를 위해 [Merkle tree][merkletree]라는 자료구조 형태로 저장을 합니다. 저희는 우선 간단하게 구현해보겠습니다. 새로운 `block`이 생성되면 개수에 상관 없이 현 시점까지 모인 모든 `transaction`을 `block`에 list 형식으로 포함하겠습니다.
 
@@ -147,9 +156,9 @@ class Blockchain(object):
         return guess_hash[:4] == "0000"
 ```
 
-*Proof of Work*는 특정한 hash값이 나오는 문자열을 찾는 작업입니다. 단순히 아무런 문자열에 대한 hash값은 계산하는 것은 아닙니다. 문자열에 대한 아무런 제한조건이 없다면 rainbow table등을 활용해 공격이 가능하기도 하며, 블럭에 포함하는 `transactions`에 대한 *proof of work*를 하는 것이기 때문이도 합니다. 즉, 저희가 찾고 싶은 문자열은, Blockchain의 가장 끝자리에 있는 `block`의 `proof`로 시작하는 문자열에서 파생되는 문자열이면서 동시에 hash값의 첫 4글자가 "0000"인 문자열을 찾도록 하겠습니다.
+*Proof of Work*는 특정한 hash값이 나오는 문자열을 찾는 작업입니다. 단순히 아무런 한 hash값은 계산하는 것은 아닙니다. 문자열에 대한 아무런 제한조건이 없다면 rainbow table등을 활용해 공격이 가능하고, 블록에 포함되는 `transactions`에 대한 *proof of work*를 하지 않아도 되기 때문입니다. 즉, 저희가 찾고 싶은 문자열은, 블록체인의 가장 끝자리에 있는 `block`의 `proof`로 시작하는 문자열에서 파생되는 문자열이면서 동시에 hash값의 첫 4글자가 "0000"인 문자열을 찾도록 하겠습니다.
 
-저희가 구현한 *proof of work*는 난이도가 변경하지 않습니다. 반면에 비트코인의 *proof of work*는 최근 블럭이 채굴된 시간에 따라 난이도가 자동적으로 변경됩니다. (여기서 *난이도*는 hash값에서 일치하는 문자열의 길이를 뜻합니다. "0000"이 일치할 확률이 "00"만큼 일치할 확률보다 낮으며 "000000"만큼 일치할 확률보단 높은 것을 뜻합니다.) 이 부분도 `yonseiblocks`의 완성도가 높아지기 위해 추후 구현되야 할 부분입니다.
+저희가 구현한 *proof of work*는 난이도가 변경하지 않습니다. 반면에 비트코인의 *proof of work*는 최근 블록이 채굴된 시간에 따라 난이도가 자동적으로 변경됩니다. (여기서 *난이도*는 hash값에서 일치하는 문자열의 길이를 뜻합니다. "0000"이 일치할 확률이 "00"만큼 일치할 확률보다 낮으며 "000000"만큼 일치할 확률보단 높은 것을 뜻합니다.) 이 부분도 `yonseiblocks`의 완성도가 높아지기 위해 추후 구현되야 할 부분입니다.
 
 이제 API를 작성하기 전에 마지막으로 `node` 관련 함수를 구현해보겠습니다.
 
@@ -230,6 +239,8 @@ class Blockchain(object):
 
 #### API 작성
 
+Flask 서버를 구축하고 `node`에게 고유식별자를 부여합니다.
+
 ```
 # Instantiate Node
 app = Flask(__name__)
@@ -241,7 +252,7 @@ node_identifier = str(uuid4()).replace('-', '')
 blockchain = Blockchain()
 ```
 
-Flask 서버를 구축하고 `node`에게 고유식별자를 부여합니다.
+채굴 API는 `utxo`에 쌓인 거래에 추가적으로 채굴 보상을 지급합니다.
 
 ```
 @app.route('/mine', methods=['GET'])
@@ -273,7 +284,7 @@ def mine():
     return jsonify(response), 200
 ```
 
-채굴 API는 `utxo`에 쌓인 거래에 추가적으로 채굴 보상을 지급합니다.
+거래 API는 인자에 대한 확일을 거쳐 `transaction`을 `utxo`에 추가합니다.
 
 ```
 @app.route('/transactions/create', methods=['POST'])
@@ -297,7 +308,7 @@ def create_transaction():
     return jsonify(response), 201
 ```
 
-거래 API는 인자에 대한 확일을 거쳐 `transaction`을 `utxo`에 추가합니다.
+블록체인의 정보를 json형태로 리턴합니다.
 
 ```
 @app.route('/chain/get', methods=['GET'])
@@ -310,7 +321,7 @@ def get_chain():
     return jsonify(response), 200
 ```
 
-블록체인의 정보를 json형태로 리턴합니다.
+`node`를 등록하고 블록체인을 업데이트하는 API를 작성합니다.
 
 ```
 @app.route('/nodes/register', methods=['POST'])
@@ -350,7 +361,7 @@ def resolve_conflicts():
     return jsonify(response), 200
 ```
 
-`node`를 등록하고 블록체인을 업데이트하는 API를 작성합니다.
+마지막으로 웹서버를 실행하는 메인함수를 작성합니다.
 
 ```
 if __name__ == '__main__':
@@ -363,27 +374,25 @@ if __name__ == '__main__':
     app.run(host='0.0.0.0', port=port)
 ```
 
-마지막으로 웹서버를 실행하는 메인함수를 작성합니다.
-
 ---
 
 ## 실행
 
-![Mining]({{site.baseurl}}/images/first/mine1.png)
-
 첫 `block`을 채굴하기.
 
-![Creating]({{site.baseurl}}/images/first/create.png)
+![Mining]({{site.baseurl}}/images/first/mine1.png)
 
 거래하기.
 
-![Mining after transaction]({{site.baseurl}}/images/first/mine2.png)
+![Creating]({{site.baseurl}}/images/first/create.png)
 
 `utxo`에 `transaction`이 있을 때 채굴하기.
 
-![Get]({{site.baseurl}}/images/first/get.png)
+![Mining after transaction]({{site.baseurl}}/images/first/mine2.png)
 
 현재 `chain` 상태 확인하기.
+
+![Get]({{site.baseurl}}/images/first/get.png)
 
 ---
 
@@ -391,11 +400,10 @@ if __name__ == '__main__':
 
 이번엔 블록체인 기술의 가장 핵심적인 기술을 최대한 간단하게 구현해봤습니다. 앞으로 `yonseiblocks`의 코드를 더 고도화 시키면서 함께 블록체인 기술에 대해서 배워보도록 하겠습니다. 읽어주셔서 감사합니다!
 
----
-
 [cc52d2aa545ce20d78a49efaf338991844512a6e]: https://github.com/yonsei-blocks/yonseiblocks/tree/cc52d2aa545ce20d78a49efaf338991844512a6e/
 [requests]: http://docs.python-requests.org/en/master/
 [flask]: http://flask.pocoo.org/
 [postman]: https://www.getpostman.com/
 [mainpy]: https://github.com/yonsei-blocks/yonseiblocks/blob/cc52d2aa545ce20d78a49efaf338991844512a6e/yonseiblocks/__main__.py
 [merkletree]: https://en.wikipedia.org/wiki/Merkle_tree
+[dvf]: https://hackernoon.com/learn-blockchains-by-building-one-117428612f46
